Upgrade Entra SDK to Kiota generated one (#819)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>